# coffee-futures-forecasting-model

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  run_forecast.py
.github/workflows/: daily-forecast.yml
coffee_forecast/: __init__.py  backtest.py  config.py  data.py  deployment.py  forecastability.py  metrics.py  models.py  stats_tests.py  viz.py
data/: Coffee_Historical_Prices.xls  coffee.csv
forecasts/: latest_forecast.csv
forecasts/archive/: 2026-04-24.csv  2026-04-27.csv  2026-04-28.csv  2026-04-29.csv
notebooks/: 01_backtest.ipynb  01_backtest_run.ipynb  02_backtest_plots.ipynb  02_forecastability.ipynb  02_per_model_plots.ipynb  03_backtest_stats.ipynb  03_statistical_tests.ipynb  04_deployment.ipynb  04_forecastability.ipynb  04_per_model_plots.ipynb  05_deployment_garch.ipynb
results/csv/: final_leaderboard_60.csv  single_origin_metrics.csv  step_errors_all_scales.csv  summary_all_scales.csv
scripts/: export_csv.py  run_backtest.py  run_forecast.py
src/: data_utils.py  export_csv.py  forecast.py
